output/nopCParser.java
// $ANTLR 3.4 /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g 2012-05-09 12:56:15

import java.util.Set;
import java.util.HashSet;
import java.util.TreeMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class nopCParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "LETTER", "LINE_COMMENT", "NAME", "WERT", "WS", "'!='", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'/'", "'/='", "':'", "';'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'?'", "'['", "']'", "'^'", "'^='", "'bool'", "'break'", "'continue'", "'else'", "'for'", "'goto'", "'if'", "'int'", "'return'", "'void'", "'while'", "'{'", "'|'", "'|='", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int COMMENT=4;
    public static final int LETTER=5;
    public static final int LINE_COMMENT=6;
    public static final int NAME=7;
    public static final int WERT=8;
    public static final int WS=9;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "assignmentOperator", "synpred23_nopC", "synpred48_nopC", 
    "synpred53_nopC", "variableDeclaration", "synpred36_nopC", "synpred19_nopC", 
    "synpred21_nopC", "synpred34_nopC", "synpred57_nopC", "synpred45_nopC", 
    "synpred4_nopC", "synpred42_nopC", "synpred27_nopC", "multiplicative_expression", 
    "postfix_expression", "synpred11_nopC", "synpred22_nopC", "synpred9_nopC", 
    "synpred12_nopC", "synpred1_nopC", "synpred37_nopC", "variableList", 
    "synpred20_nopC", "typeSpecifier", "shift_expression", "synpred24_nopC", 
    "and_expression", "logical_and_expression", "synpred17_nopC", "synpred15_nopC", 
    "unary_expression", "selection_statement", "synpred28_nopC", "statement", 
    "jump_statement", "synpred51_nopC", "primary_expression", "synpred14_nopC", 
    "synpred16_nopC", "synpred39_nopC", "synpred30_nopC", "synpred52_nopC", 
    "relational_expression", "synpred32_nopC", "synpred38_nopC", "synpred69_nopC", 
    "synpred40_nopC", "iteration_statement", "synpred46_nopC", "exclusive_or_expression", 
    "synpred33_nopC", "parameterList", "variableDeclarationList", "synpred54_nopC", 
    "synpred62_nopC", "inclusive_or_expression", "synpred66_nopC", "additive_expression", 
    "synpred70_nopC", "synpred5_nopC", "globalVariableDeclaration", "expression", 
    "synpred56_nopC", "synpred55_nopC", "synpred31_nopC", "synpred43_nopC", 
    "synpred3_nopC", "synpred7_nopC", "functionDefinition", "synpred25_nopC", 
    "synpred50_nopC", "synpred63_nopC", "synpred44_nopC", "synpred6_nopC", 
    "synpred13_nopC", "synpred47_nopC", "synpred8_nopC", "cFile", "synpred58_nopC", 
    "globalFunctionOrStatement", "synpred64_nopC", "synpred26_nopC", "synpred41_nopC", 
    "synpred61_nopC", "synpred29_nopC", "synpred60_nopC", "logical_or_expression", 
    "expression_statement", "synpred67_nopC", "synpred49_nopC", "assignment", 
    "equality_expression", "synpred35_nopC", "synpred68_nopC", "synpred18_nopC", 
    "synpred10_nopC", "synpred2_nopC", "synpred59_nopC", "globalVariableDeclarationList", 
    "functionCall", "codeBlock", "synpred65_nopC"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, true, false, false, false, false, false, false, false, false, 
        false, false, false, true, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public nopCParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public nopCParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[103+1];
         

        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public nopCParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
    this.state.ruleMemo = new HashMap[103+1];
     

}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return nopCParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g"; }


    	TreeMap<String, String> functionTable = new TreeMap<String, String>();
    	TreeMap<String, Float> varTable = new TreeMap<String, Float>();



    // $ANTLR start "cFile"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:30:1: cFile : ( globalFunctionOrStatement )+ ;
    public final void cFile() throws RecognitionException {
        int cFile_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "cFile");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(30, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:35:2: ( ( globalFunctionOrStatement )+ )
            dbg.enterAlt(1);

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:36:2: ( globalFunctionOrStatement )+
            {
            dbg.location(36,2);
            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:36:2: ( globalFunctionOrStatement )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==46||LA1_0==53||LA1_0==55) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:36:2: globalFunctionOrStatement
            	    {
            	    dbg.location(36,2);
            	    pushFollow(FOLLOW_globalFunctionOrStatement_in_cFile70);
            	    globalFunctionOrStatement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, cFile_StartIndex); }

        }
        dbg.location(37, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "cFile");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "cFile"



    // $ANTLR start "globalFunctionOrStatement"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:39:1: globalFunctionOrStatement : ( ( typeSpecifier NAME ( '=' | ';' | ',' ) )=> globalVariableDeclaration | ( typeSpecifier NAME '(' )=> functionDefinition );
    public final void globalFunctionOrStatement() throws RecognitionException {
        int globalFunctionOrStatement_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "globalFunctionOrStatement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(39, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:40:2: ( ( typeSpecifier NAME ( '=' | ';' | ',' ) )=> globalVariableDeclaration | ( typeSpecifier NAME '(' )=> functionDefinition )
            int alt2=2;
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==46||LA2_0==53||LA2_0==55) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==NAME) ) {
                    int LA2_2 = input.LA(3);

                    if ( (synpred4_nopC()) ) {
                        alt2=1;
                    }
                    else if ( (synpred5_nopC()) ) {
                        alt2=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:41:2: ( typeSpecifier NAME ( '=' | ';' | ',' ) )=> globalVariableDeclaration
                    {
                    dbg.location(41,44);
                    pushFollow(FOLLOW_globalVariableDeclaration_in_globalFunctionOrStatement104);
                    globalVariableDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:42:4: ( typeSpecifier NAME '(' )=> functionDefinition
                    {
                    dbg.location(42,33);
                    pushFollow(FOLLOW_functionDefinition_in_globalFunctionOrStatement121);
                    functionDefinition();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, globalFunctionOrStatement_StartIndex); }

        }
        dbg.location(43, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "globalFunctionOrStatement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "globalFunctionOrStatement"


    public static class globalVariableDeclaration_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "globalVariableDeclaration"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:45:1: globalVariableDeclaration : typeSpecifier globalVariableDeclarationList ';' ;
    public final nopCParser.globalVariableDeclaration_return globalVariableDeclaration() throws RecognitionException {
        nopCParser.globalVariableDeclaration_return retval = new nopCParser.globalVariableDeclaration_return();
        retval.start = input.LT(1);

        int globalVariableDeclaration_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "globalVariableDeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(45, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:46:2: ( typeSpecifier globalVariableDeclarationList ';' )
            dbg.enterAlt(1);

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:47:2: typeSpecifier globalVariableDeclarationList ';'
            {
            dbg.location(47,2);
            pushFollow(FOLLOW_typeSpecifier_in_globalVariableDeclaration134);
            typeSpecifier();

            state._fsp--;
            if (state.failed) return retval;
            dbg.location(47,16);
            pushFollow(FOLLOW_globalVariableDeclarationList_in_globalVariableDeclaration136);
            globalVariableDeclarationList();

            state._fsp--;
            if (state.failed) return retval;
            dbg.location(47,46);
            match(input,30,FOLLOW_30_in_globalVariableDeclaration138); if (state.failed) return retval;
            dbg.location(47,50);
            if ( state.backtracking==0 ) {System.out.println(input.toString(retval.start,input.LT(-1)));}

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, globalVariableDeclaration_StartIndex); }

        }
        dbg.location(48, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "globalVariableDeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "globalVariableDeclaration"



    // $ANTLR start "globalVariableDeclarationList"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:55:1: globalVariableDeclarationList : NAME ( '=' WERT )? ( ',' NAME ( '=' WERT )? )* ;
    public final void globalVariableDeclarationList() throws RecognitionException {
        int globalVariableDeclarationList_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "globalVariableDeclarationList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:56:2: ( NAME ( '=' WERT )? ( ',' NAME ( '=' WERT )? )* )
            dbg.enterAlt(1);

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:2: NAME ( '=' WERT )? ( ',' NAME ( '=' WERT )? )*
            {
            dbg.location(57,2);
            match(input,NAME,FOLLOW_NAME_in_globalVariableDeclarationList158); if (state.failed) return ;
            dbg.location(57,7);
            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:7: ( '=' WERT )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==35) ) {
                alt3=1;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:8: '=' WERT
                    {
                    dbg.location(57,8);
                    match(input,35,FOLLOW_35_in_globalVariableDeclarationList161); if (state.failed) return ;
                    dbg.location(57,12);
                    match(input,WERT,FOLLOW_WERT_in_globalVariableDeclarationList163); if (state.failed) return ;

                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(57,19);
            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:19: ( ',' NAME ( '=' WERT )? )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==23) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:20: ',' NAME ( '=' WERT )?
            	    {
            	    dbg.location(57,20);
            	    match(input,23,FOLLOW_23_in_globalVariableDeclarationList168); if (state.failed) return ;
            	    dbg.location(57,24);
            	    match(input,NAME,FOLLOW_NAME_in_globalVariableDeclarationList170); if (state.failed) return ;
            	    dbg.location(57,29);
            	    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:29: ( '=' WERT )?
            	    int alt4=2;
            	    try { dbg.enterSubRule(4);
            	    try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==35) ) {
            	        alt4=1;
            	    }
            	    } finally {dbg.exitDecision(4);}

            	    switch (alt4) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:57:30: '=' WERT
            	            {
            	            dbg.location(57,30);
            	            match(input,35,FOLLOW_35_in_globalVariableDeclarationList173); if (state.failed) return ;
            	            dbg.location(57,34);
            	            match(input,WERT,FOLLOW_WERT_in_globalVariableDeclarationList175); if (state.failed) return ;

            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(4);}


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, globalVariableDeclarationList_StartIndex); }

        }
        dbg.location(58, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "globalVariableDeclarationList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "globalVariableDeclarationList"


    public static class variableDeclaration_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "variableDeclaration"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:61:1: variableDeclaration : typeSpecifier variableDeclarationList ';' ;
    public final nopCParser.variableDeclaration_return variableDeclaration() throws RecognitionException {
        nopCParser.variableDeclaration_return retval = new nopCParser.variableDeclaration_return();
        retval.start = input.LT(1);

        int variableDeclaration_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "variableDeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(61, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:62:2: ( typeSpecifier variableDeclarationList ';' )
            dbg.enterAlt(1);

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:63:2: typeSpecifier variableDeclarationList ';'
            {
            dbg.location(63,2);
            pushFollow(FOLLOW_typeSpecifier_in_variableDeclaration196);
            typeSpecifier();

            state._fsp--;
            if (state.failed) return retval;
            dbg.location(63,16);
            pushFollow(FOLLOW_variableDeclarationList_in_variableDeclaration198);
            variableDeclarationList();

            state._fsp--;
            if (state.failed) return retval;
            dbg.location(63,40);
            match(input,30,FOLLOW_30_in_variableDeclaration200); if (state.failed) return retval;
            dbg.location(63,44);
            if ( state.backtracking==0 ) {System.out.println(input.toString(retval.start,input.LT(-1)));}

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, variableDeclaration_StartIndex); }

        }
        dbg.location(64, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "variableDeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "variableDeclaration"



    // $ANTLR start "variableDeclarationList"
    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:66:1: variableDeclarationList : NAME ( '=' expression )? ( ',' NAME ( '=' expression )? )* ;
    public final void variableDeclarationList() throws RecognitionException {
        int variableDeclarationList_StartIndex = input.index();

        try { dbg.enterRule(getGrammarFileName(), "variableDeclarationList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(66, 0);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return ; }

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:67:2: ( NAME ( '=' expression )? ( ',' NAME ( '=' expression )? )* )
            dbg.enterAlt(1);

            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:2: NAME ( '=' expression )? ( ',' NAME ( '=' expression )? )*
            {
            dbg.location(68,2);
            match(input,NAME,FOLLOW_NAME_in_variableDeclarationList215); if (state.failed) return ;
            dbg.location(68,7);
            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:7: ( '=' expression )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==35) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:8: '=' expression
                    {
                    dbg.location(68,8);
                    match(input,35,FOLLOW_35_in_variableDeclarationList218); if (state.failed) return ;
                    dbg.location(68,12);
                    pushFollow(FOLLOW_expression_in_variableDeclarationList220);
                    expression();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}

            dbg.location(68,25);
            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:25: ( ',' NAME ( '=' expression )? )*
            try { dbg.enterSubRule(8);

            loop8:
            do {
                int alt8=2;
                try { dbg.enterDecision(8, decisionCanBacktrack[8]);

                int LA8_0 = input.LA(1);

                if ( (LA8_0==23) ) {
                    alt8=1;
                }


                } finally {dbg.exitDecision(8);}

                switch (alt8) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:26: ',' NAME ( '=' expression )?
            	    {
            	    dbg.location(68,26);
            	    match(input,23,FOLLOW_23_in_variableDeclarationList225); if (state.failed) return ;
            	    dbg.location(68,30);
            	    match(input,NAME,FOLLOW_NAME_in_variableDeclarationList227); if (state.failed) return ;
            	    dbg.location(68,35);
            	    // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:35: ( '=' expression )?
            	    int alt7=2;
            	    try { dbg.enterSubRule(7);
            	    try { dbg.enterDecision(7, decisionCanBacktrack[7]);

            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0==35) ) {
            	        alt7=1;
            	    }
            	    } finally {dbg.exitDecision(7);}

            	    switch (alt7) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // /Users/alexander/Dropbox/Uni/Semester4/FLA/NOP/nopC.g:68:36: '=' expression
            	            {
            	            dbg.location(68,36);
            	            match(input,35,FOLLOW_35_in_variableDeclarationList230); if (state.failed) return ;
            	            dbg.location(68,40);
            	            pushFollow(FOLLOW_expression_in_variableDeclarationList232);
            	            expression();

            	            state._fsp--;
            	            if (state.failed) return ;

            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(7);}


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);
            } finally {dbg.exitSubRule(8);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, variableDeclarationList_StartIndex); }

        }
        dbg.location(69, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "variableDeclarationList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "variableDeclarationList"

